<resources>
    <string name="app_name">Informal Advisory</string>
    <string name="location_permission">Check Permission</string>
    <string name="sign_out">Sign Out</string>
    <string name="location_permission_indicator" translatable="false">Location Permission Indicator</string>
    <string name="name">Name:</string>
    <string name="placeholder" translatable="false">PLACEHOLDER</string>
    <string name="user_profile_picture">User Profile Picture</string>
    <string name="email" translatable="false">Email:</string>
    <string name="continue_string">Continue</string>
    <string name="pick_a_role">Pick a Role</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="cancel">Cancel</string>
    <string name="logo">Logo</string>
    <string name="student_module">Student Module</string>
    <string name="available">Available</string>
    <string name="teacher_module">Teacher Module</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="ver_asesorias">Ver asesorias</string>
    <string name="promedioAsesorias">5</string>
    <string name="asesoriasImpartidas">0</string>
    <string name="tiempoAsesorias">0</string>
</resources>


